--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,54 @@
 <head>
   <title>Website</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div id="sidebar">
+		<div id="logo">
+			<%= link_to root_path do %>
+				<%= image_tag "logo.svg" %>
+				<% end %>
+			</div>
+
+			<ul>
+				<li class="category">Website</li>
+				<li><%= link_to "Blog", root_path %></li>
+				<li>About</li>
+
+
+			</ul>
+
+
+			<ul>
+				<li class="category">Social</li>
+				<li><a href="https://radiant-peak-4110.herokuapp.com/users/zach">entersquare</li>
+				<li><a href="https://twitter.com/itszachford">Twitter</li>
+				<li><a href="https://instagram.com/itszachford">Instagram</li>
+				<li><a href="mailto:zach@zachford.me">Email</li>
+			</ul>
+			<p class="sign_in"><%= link_to "Admin Login" %></p>
+	</div>
+	<div id="main_content">
+		<div id="header">
+		<p>All Posts</p>
+		<div class="buttons">
+			<button class="button"><%= link_to "New Post", new_post_path %></button>
+			<button class="button">Log out</button>
+
+
+	</div>
+</div>
+
+	<% flash.each do |name, msg| %>
+		<%= cotent_tag(:div, msg, class: "alert") %>
+	<% end %> 
 
 <%= yield %>
+</div>
 
 </body>
 </html>
