--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
+<div id="page_wrapper">
+
 <h1>New Post</h1>
 
 <%= form_for :post, url: posts_path do |f| %>
@@ -15,5 +17,7 @@
 		<%= f.submit %>
 	</p>
 
-<% end %>
+	<% end %>
+
+</div>
 
