--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,9 @@
 				<li><a href="https://instagram.com/itszachford">Instagram</li>
 				<li><a href="mailto:zach@zachford.me">Email</li>
 			</ul>
+			<% if !user_signed_in? %>
 			<p class="sign_in"><%= link_to "Admin Login" %></p>
+			<% end %>
 	</div>
 	<div id="main_content">
 		<div id="header">
@@ -44,17 +46,19 @@
 			<%= link_to "Back to All Posts", root_path %>
 		<% end %>
 
-		
+		<% if user_signed_in? %>
+
 		<div class="buttons">
 			<button class="button"><%= link_to "New Post", new_post_path %></button>
 			<button class="button">Log out</button>
 
+		<% end %>
 
 	</div>
 </div>
 
 	<% flash.each do |name, msg| %>
-		<%= cotent_tag(:div, msg, class: "alert") %>
+		<%= content_tag(:div, msg, class: "alert") %>
 	<% end %> 
 
 <%= yield %>
