--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,7 @@
  		<p class="comment_time"><%= time_ago_in_words(comment.created_at) %> Ago
  		</p>
  		</div>
-
+		<% if user_signed_in? %>
  		<p><%= link_to 'Delete', [comment.post, comment],
  										method: :delete,
  										class: "button",
@@ -13,5 +13,5 @@
  			
 
  		</p>
-
+		<% end %>
  	</div>
