--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,21 @@
 <div id="page_wrapper">
 
+
+<div class="top_nav">
+		<ul>
+				<li class="blog">
+
+				<%= link_to "blog", posts_path %>
+				
+				</li>
+				<li class="design"><%= link_to "design", design_path %></li>
+				<li class="music"><%= link_to "music", music_path %></li>
+				<li class="other"><%= link_to "other", other_path %></li>
+
+		</ul>
+</div>
+<br>
+<br>
 <div id="content">
 	<h1>Hey! I'm Zach and I love to build stuff.</h1>
 	<p>My family is blessed to call Nashville, TN home.</p>
