--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,10 +16,12 @@
  */
 
 @import 'normalize';
+@import 'mininav';
 
 html, body {
 	font-family: 'Futura', sans-serif;
 }
+
 
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 200;
@@ -40,6 +42,19 @@ a {
 		color: #D6D6D6;
 	}
 }
+
+#zach_header {
+	text-align: center;
+
+	a {
+		padding-top: 50px;
+		font-size: 2em;
+		color: #D6D6D6;
+	}
+}
+
+
+
 
 
 
@@ -166,6 +181,9 @@ a {
 
 
 
+
+
+
 	#header {
 		padding: 1em 3em;
 		p {
@@ -190,7 +208,7 @@ a {
 
 
 	.post_wrapper {
-		padding: 3em;
+		padding: 2.7em;
 		border-bottom: 1px solid #d6dce0;
 		.title {
 			margin: 0;
