--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,5 +83,19 @@
 </div>
 </div>
 
+<div class="footer">
+		
+				<div class="socialicons">
+				<ul>
+				<!---<li class="medium"><a target="_blank" href="https://medium.com/@itszachford"><%= image_tag "medium.svg" %></li> -->
+				<li><a target="_blank" href="https://dribbble.com/zachford"><%= image_tag "dribbble.svg" %></li>
+				<li><a target="_blank" href="https://twitter.com/itszachford"><%= image_tag "twitter.svg" %></li>
+				<li><a target="_blank" href="https://instagram.com/itszachford"><%= image_tag "instagram.svg" %></li>
+				<li><a target="_blank" href="https://www.youtube.com/channel/UCmnPOgJ49WfahGhnrsIwtnQ"><%= image_tag "youtube.svg" %></li>
+
+				</ul>
+				</div>
+</div>
+
 </body>
 </html>
