fix nav to home

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,10 +42,10 @@
 -->
 		<br>  
 		<div id="zach_header">
-		<% if current_page?(home_path) %>
+		<% if current_page?(root_path) %>
 
 		<% else %>
-			<%= link_to "ZACH FORD", home_path %>
+			<%= link_to "ZACH FORD", root_path %>
 		<% end %>
 			
 
