--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,7 +19,10 @@
 
 	<h2 class="title"> <%= link_to post.title, post %> </h2>
 	<p class="date"><%= post.created_at.strftime("%B, %d, %Y") %> </p>
+	<div class="linebreak">
+</div>
 </div>
 <% end %>
+
 
 </div>
