--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,6 +89,7 @@
 				<div class="socialicons">
 				<ul>
 				<!---<li class="medium"><a target="_blank" href="https://medium.com/@itszachford"><%= image_tag "medium.svg" %></li> -->
+				<li><a target="_blank" href="https://snapchat.com/add/itszachford"><%= image_tag "snapchat.svg" %></li>
 				<li><a target="_blank" href="https://dribbble.com/zachford"><%= image_tag "dribbble.svg" %></li>
 				<li><a target="_blank" href="https://twitter.com/itszachford"><%= image_tag "twitter.svg" %></li>
 				<li><a target="_blank" href="https://instagram.com/itszachford"><%= image_tag "instagram.svg" %></li>
