--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -18,8 +18,10 @@
 <br>
 <div id="content">
 	<h1>Here is what I've been working on:</h1>
+	<div class="work_content">
 	<p>projects projects</p>
 
-	<button class="button">Sign up for my Newsletter</button>
+	</div>
 </div>
 
+</div>
