--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,10 +16,16 @@
 </div>
 <br>
 <br>
-<div id="content">
-	<h1>Hey! I'm Zach and I love to build stuff.</h1>
-	<p>My family is blessed to call Nashville, TN home.</p>
-	<p>I'm all about design, music, social media, and like I said before, building stuff! I'd love for you to stick around!</p>
-	<button class="button">Sign up for my Newsletter</button>
+<div id="about_content">
+	<h1>Hey! I'm Zach.</h1>
+	<br>
+	I'm blessed to call Nashville, TN home with my wife and son.<br>
+	I work for Dave Ramsey as a designer.<br>
+	I started a social media network called Entersquare.<br>
+	I've been playing music since I was a youngin'<br>
+	I like to talk about design, music, social media, and building stuff!<br><br><br>
+	
+	<a href="mailto:zach@zachford.me" target="_top">Contact me if you would like to collaborate, talk about business things or just grab a coffee!</a>
+
 </div>
 
