Add music page content

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,7 +22,7 @@
 	I'm blessed to call Nashville, TN home with my wife and son.<br>
 	I work for Dave Ramsey as a designer.<br>
 	I started a social media network called Entersquare.<br>
-	I've been playing music since I was a youngin'<br>
+	I've been playing music since I was a youngin'.<br>
 	I like to talk about design, music, social media, and building stuff!<br><br><br>
 	
 	<a href="mailto:zach@zachford.me" target="_top">Contact me if you would like to collaborate, talk about business things or just grab a coffee!</a>
