--- a/app/views/pages/music.html.erb
+++ b/app/views/pages/music.html.erb
@@ -13,4 +13,20 @@
 				<li class="other"><%= link_to "other", other_path %></li>
 
 		</ul>
+
+
+<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/226106805&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+<br>	
+		<div class="content">
+		<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/41558621&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+
+<br>
+<br>
+<br>
+<br>  
+<br>
+<br>
+<br>
+<br>  
+		</div>
 </div>
