Add styles to posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
 				<%= link_to "blog", posts_path %>
 				
 				</li>
-				<li class="design"><%= link_to "design", design_path %></li>
+				<li class="work"><%= link_to "work", work_path %></li>
 				<li class="music"><%= link_to "music", music_path %></li>
 				<li class="other"><%= link_to "other", other_path %></li>
 
@@ -23,6 +23,11 @@
 </div>
 </div>
 <% end %>
-
+<Br>
+<Br>
+<br>
+<Br>
+<br>
+<br>
 
 </div>
