--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 <div class="home_nav">
 		<ul>
 				<li class="blog"><%= link_to "blog", posts_path %></li>
-				<li class="design"><%= link_to "design", design_path %></li>
+				<li class="work"><%= link_to "work", work_path %></li>
 				<li class="music"><%= link_to "music", music_path %></li>
 				<li class="other"><%= link_to "other", other_path %></li>
 		</ul>
