--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post do |f| %>
+<%= form_for @post, html: { multipart: true } do |f| %>
 	<% if @post.errors.any? %>
 		<div id="errors">
 			<h2><%= pluralize(@post.errors.count, "error") %> prevented this post from saving:</h2>
@@ -9,6 +9,12 @@
 			</ul>
 		</div>
 <% end %>
+	
+	<p>
+		<%= f.label :image %> <br>
+		<%= f.file_field :title %>
+	</p>
+
 	<p>
 		<%= f.label :title %> <br>
 		<%= f.text_field :title %>
