--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,13 +7,18 @@
 				<%= link_to "blog", posts_path %>
 				
 				</li>
-				<li class="design"><%= link_to "design", design_path %></li>
+				<li class="work"><%= link_to "work", work_path %></li>
 				<li class="music"><%= link_to "music", music_path %></li>
 				<li class="other"><%= link_to "other", other_path %></li>
 
 		</ul>
 </div>
+
+=
 <div id="post_content">
+
+<%= image_tag @post.image.url(:medium) %>
+
 <h1 class="title">	
 	<%= @post.title %>
 </h1>
